# latest

./: .gitignore  README.md  index.html  install.sh  package-lock.json  package.json
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: index.html
docs/plans/: 2026-03-10-distribution-and-marketing-design.md  2026-03-10-distribution-and-marketing-plan.md
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  scheduler.rs  settings.rs  state.rs  tray.rs  version.rs
src-tauri/src/discovery/: mod.rs  plist_reader.rs  system_profiler.rs
src-tauri/src/sources/: homebrew.rs  mas.rs  mod.rs  sparkle.rs
src-tauri/src/updater/: brew_update.rs  github_update.rs  mas_update.rs  mod.rs  sparkle_update.rs
src/components/: app-list.js  settings.js
