[package]
name = "latest"
version = "0.1.0"
edition = "2021"

[lib]
name = "latest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plist = "1"
reqwest = { version = "0.12", features = ["native-tls", "json"] }
quick-xml = { version = "0.37", features = ["serialize"] }
semver = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
window-vibrancy = "0.6"
tauri-plugin-opener = "2.5.3"
